tao api doc swagger

--- a/fe/ActionHistory.html
+++ b/fe/ActionHistory.html
@@ -100,8 +100,8 @@
       <!-- Select sắp xếp -->
       <select class="form-select custom-select" id="sortSelect" style="max-width: 200px;" id="sortSelect">
         <option selected>Sắp xếp</option>
-        <option value="asc">Thời gian tăng dần</option>
-        <option value="desc">Thời gian giảm dần</option>
+        <option value="asc">Thời gian xa nhất</option>
+        <option value="desc">Thời gian gần nhất</option>
       </select>
 
 
