--- a/fe/Profile.html
+++ b/fe/Profile.html
@@ -85,11 +85,11 @@
     </ul>
   </div>
   
-  <div class="main-content" style="margin-left: 160px; gap: 10px; padding: auto;">
+  <div class="main-content" style="margin-left: 160px; gap: 10px;">
      <!-- <div class="col-md-14 p-4"> -->
       <!-- <div class="card p-4 shadow-sm" > -->
         <div class="row" style="background-color: white; border-radius: 10px; margin: 5px;">
-          <div class="col-md-4 d-flex justify-content-center align-items-center" style="margin-top: 30px; margin-bottom: 20px;">
+          <div class="col-md-4 d-flex justify-content-center align-items-center" style="margin-top: 10px; margin-bottom: 1cd be0px;">
             <div class="profile-img" style="width: 200px; height: 200px;">
               <img src="image/profile.jpg" alt="profile" style="width: 200px; height: 200px; border-radius: 50%;">
 
@@ -108,14 +108,14 @@
         
   <!-- </div> -->
   
-  <div class="row" style="margin-top: 20px;">
+  <div class="row" style="margin-top: 10px;">
   <div class="col-md-6 mb-6">
     <a href="https://link-to-document" target="_blank" class="text-decoration-none" style="color:#E91E63;">
       <div class="card-link-box">
         <div class="row">
           <div class="col-md-8 mb-8 text-start">
             <h5 class="mb-1">Tài liệu</h5>
-            <p class="mb-0 text-center" style="margin-top: 20px;">Click vào liên kết</p>
+            <p class="mb-0 text-center" style="margin-top: 10px;">Click vào liên kết</p>
           </div>
           <div class="col-md-2 mb-2" style="font-size: 80px; color: #FFC7C2;">
             <i class="bi bi-file-earmark-text"></i>
@@ -131,7 +131,7 @@
         <div class="row">
           <div class="col-md-8 mb-8 text-start">
             <h5 class="mb-1">Github</h5>
-            <p class="mb-0 text-center" style="margin-top: 20px;">Click vào liên kết</p>
+            <p class="mb-0 text-center" style="margin-top: 10px;">Click vào liên kết</p>
           </div>
           <div class="col-md-2 mb-2" style="font-size: 80px; color: #FFC7C2;">
             <i class="bi bi-github"></i>
@@ -142,14 +142,29 @@
   </div>
 </div>
 
-<div class="row" style="margin-top: 20px;">
+<div class="row" style="margin-top: 10px;">
+  <div class="col-md-6 mb-6">
+    <a href="https://link-to-database" target="_blank" class="text-decoration-none" style="color: #E91E63;">
+      <div class="card-link-box">
+        <div class="row">
+          <div class="col-md-8 mb-8 text-start">
+            <h5 class="mb-1">API Doc</h5>
+            <p class="mb-0 text-center" style="margin-top: 10px;">Click vào liên kết</p>
+          </div>
+          <div class="col-md-2 mb-2" style="font-size: 80px; color: #FFC7C2;">
+            <i class="fa-solid fa-database"></i>
+          </div>
+        </div>
+      </div>
+    </a>
+  </div>
   <div class="col-md-6 mb-6">
     <a href="https://www.figma.com/design/Xqep7b0j8uGScztBqCPJLN/IOT?node-id=0-1&p=f&t=AiYEnQTQNfHkjGkJ-0" target="_blank" class="text-decoration-none" style="color: #E91E63;">
       <div class="card-link-box">
         <div class="row">
           <div class="col-md-8 mb-8 text-start">
             <h5 class="mb-1">Figma</h5>
-            <p class="mb-0 text-center" style="margin-top: 20px;">Click vào liên kết</p>
+            <p class="mb-0 text-center" style="margin-top: 10px;">Click vào liên kết</p>
           </div>
           <div class="col-md-2 mb-2" style="font-size: 80px; color: #FFC7C2;">
             <i class="fa-brands fa-figma"></i>
@@ -159,21 +174,7 @@
     </a>
   </div>
 
-  <div class="col-md-6 mb-6">
-    <a href="https://link-to-database" target="_blank" class="text-decoration-none" style="color: #E91E63;">
-      <div class="card-link-box">
-        <div class="row">
-          <div class="col-md-8 mb-8 text-start">
-            <h5 class="mb-1">Database</h5>
-            <p class="mb-0 text-center" style="margin-top: 20px;">Click vào liên kết</p>
-          </div>
-          <div class="col-md-2 mb-2" style="font-size: 80px; color: #FFC7C2;">
-            <i class="fa-solid fa-database"></i>
-          </div>
-        </div>
-      </div>
-    </a>
-  </div>
+  
 </div>
 
   </div>    
