Sua trang profile

--- a/fe/Profile.html
+++ b/fe/Profile.html
@@ -144,7 +144,7 @@
 
 <div class="row" style="margin-top: 10px;">
   <div class="col-md-6 mb-6">
-    <a href="https://link-to-database" target="_blank" class="text-decoration-none" style="color: #E91E63;">
+    <a href="http://localhost:3000/api-docs" target="_blank" class="text-decoration-none" style="color: #E91E63;">
       <div class="card-link-box">
         <div class="row">
           <div class="col-md-8 mb-8 text-start">
