--- a/fe/Dashboard.html
+++ b/fe/Dashboard.html
@@ -105,7 +105,7 @@
       </div>
    
       
-      <div class="col-md-3 mb-4" style="">
+      <div class="col-md-3 mb-4">
        <div class="control-card" data-id="1">
         
             <div class="control-card-icon">
